fixed header to collapse and resume to fit screen

--- a/src/assets/css/resume.css
+++ b/src/assets/css/resume.css
@@ -1,6 +1,6 @@
 .resume-image {
-    max-width: 200%; /* Ensure the image doesn't exceed its container */
-    max-height: 800px; /* Set the maximum height of the image */
+    max-width: 100%; /* Ensure the image doesn't exceed its container */
+    max-height: auto; /* Set the maximum height of the image */
     display: block; /* Ensure the image is displayed as a block element */
     margin: 0 auto; /* Center the image horizontally */
   }
